--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@ resp=urlopen(url)
 with open("mybaidu.html",mode="w",encoding="utf-8") as f:
     f.write(resp.read().decode("utf-8"))
 print("over!")
+demo
